--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "compressorjs": "^1.2.1",
     "firebase": "^10.5.0",
+    "nanoid": "^5.0.2",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3",
+    "typed.js": "^2.0.16"
   },
   "devDependencies": {
     "autoprefixer": "^10",
